# notion-journal

./: README.md  pyproject.toml
notion_journal/: __init__.py
