[tool.poetry]
name = "notion_journal"
version = "0.1.0"
description = ""
authors = ["Katsuki Kobayashi <rare@tirasweel.org>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
notion-client = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest-black = "^0.3.12"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
